--- a/Kinovea.Camera/Languages/CameraLang.resx
+++ b/Kinovea.Camera/Languages/CameraLang.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!-- 
 		www.kinovea.org
 		
@@ -7,100 +7,167 @@
 		This file follow MS Resx schema.
 	-->
 <root>
-   <xsd:schema xmlns:xsd="http://www.w3.org/2001/XMLSchema"
-               xmlns:msdata="urn:schemas-microsoft-com:xml-msdata"
-               id="root">
-      <xsd:import namespace="http://www.w3.org/XML/1998/namespace"/>
-      <xsd:element name="root" msdata:IsDataSet="true">
-         <xsd:complexType>
-            <xsd:choice maxOccurs="unbounded">
-               <xsd:element name="metadata">
-                  <xsd:complexType>
-                     <xsd:sequence>
-                        <xsd:element name="value" type="xsd:string" minOccurs="0"/>
-                     </xsd:sequence>
-                     <xsd:attribute name="name" use="required" type="xsd:string"/>
-                     <xsd:attribute name="type" type="xsd:string"/>
-                     <xsd:attribute name="mimetype" type="xsd:string"/>
-                     <xsd:attribute ref="xml:space"/>
-                  </xsd:complexType>
-               </xsd:element>
-               <xsd:element name="assembly">
-                  <xsd:complexType>
-                     <xsd:attribute name="alias" type="xsd:string"/>
-                     <xsd:attribute name="name" type="xsd:string"/>
-                  </xsd:complexType>
-               </xsd:element>
-               <xsd:element name="data">
-                  <xsd:complexType>
-                     <xsd:sequence>
-                        <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1"/>
-                        <xsd:element name="comment"
-                                     type="xsd:string"
-                                     minOccurs="0"
-                                     msdata:Ordinal="2"/>
-                     </xsd:sequence>
-                     <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1"/>
-                     <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3"/>
-                     <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4"/>
-                     <xsd:attribute ref="xml:space"/>
-                  </xsd:complexType>
-               </xsd:element>
-               <xsd:element name="resheader">
-                  <xsd:complexType>
-                     <xsd:sequence>
-                        <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1"/>
-                     </xsd:sequence>
-                     <xsd:attribute name="name" type="xsd:string" use="required"/>
-                  </xsd:complexType>
-               </xsd:element>
-            </xsd:choice>
-         </xsd:complexType>
-      </xsd:element>
-   </xsd:schema>
-   <resheader name="resmimetype">
-      <value>text/microsoft-resx</value>
-   </resheader>
-   <resheader name="version">
-      <value>2.0</value>
-   </resheader>
-   <resheader name="reader">
-      <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-   </resheader>
-   <resheader name="writer">
-      <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-   </resheader>
-   <data name="Generic_Apply" xml:space="preserve"><value>Apply</value></data>
-   <data name="Generic_Cancel" xml:space="preserve"><value>Cancel</value></data>
-   <data name="FormHandshakeResult_Title" xml:space="preserve"><value>Connection test</value></data>
-   <data name="FormHandshakeResult_Failure_Title" xml:space="preserve"><value>Connection test failure</value></data>
-   <data name="FormHandshakeResult_Failure_Message" xml:space="preserve"><value>An error occurred during the connection test.</value></data>
-   <data name="FormIconPicker_Title" xml:space="preserve"><value>Icons</value></data>
-   <data name="FormConfiguration_Title" xml:space="preserve"><value>Camera configuration</value></data>
-   <data name="FormConfiguration_Properties_StreamFormat" xml:space="preserve"><value>Stream format:</value></data>
-   <data name="FormConfiguration_Properties_ImageSize" xml:space="preserve"><value>Image size:</value></data>
-   <data name="FormConfiguration_Properties_ImageWidth" xml:space="preserve"><value>Width:</value></data>
-   <data name="FormConfiguration_Properties_ImageHeight" xml:space="preserve"><value>Height:</value></data>
-   <data name="FormConfiguration_Properties_Framerate" xml:space="preserve"><value>Framerate:</value></data>
-   <data name="FormConfiguration_Properties_Exposure" xml:space="preserve"><value>Exposure:</value></data>
-   <data name="FormConfiguration_Properties_ExposureMicro" xml:space="preserve"><value>Exposure (µs):</value></data>
-   <data name="FormConfiguration_Properties_Gain" xml:space="preserve"><value>Gain:</value></data>
-   <data name="FormConfiguration_Properties_Focus" xml:space="preserve"><value>Focus:</value></data>
-   <data name="FormConfiguration_Properties_BayerFormatConversion" xml:space="preserve"><value>Bayer format conversion:</value></data>
-   <data name="FormConfiguration_Auto" xml:space="preserve"><value>Auto</value></data>
-   <data name="FormConfiguration_DevicePropertyPages" xml:space="preserve"><value>Device property pages</value></data>
-   <data name="FormConfiguration_DevicePropertyPages_Error" xml:space="preserve"><value>An error happened while trying to display the device property page for {0}.</value></data>
-   <data name="FormConfiguration_Reconnect" xml:space="preserve"><value>Reconnect</value></data>
-   <data name="FormConfiguration_ImportParameters" xml:space="preserve"><value>Import parameters</value></data>
-   <data name="FormConfiguration_Test" xml:space="preserve"><value>Test</value></data>
-   <data name="FormConnectionWizard_Network" xml:space="preserve"><value>Network</value></data>
-   <data name="FormConnectionWizard_Host" xml:space="preserve"><value>Host (IP address)</value></data>
-   <data name="FormConnectionWizard_Port" xml:space="preserve"><value>Port</value></data>
-   <data name="FormConnectionWizard_Format" xml:space="preserve"><value>Format</value></data>
-   <data name="FormConnectionWizard_Authentication" xml:space="preserve"><value>Authentication</value></data>
-   <data name="FormConnectionWizard_User" xml:space="preserve"><value>User</value></data>
-   <data name="FormConnectionWizard_Password" xml:space="preserve"><value>Password</value></data>
-   <data name="FormConnectionWizard_URL" xml:space="preserve"><value>Final URL</value></data>
-   
-   
+  <xsd:schema xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata" id="root">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+    <xsd:element name="root" msdata:IsDataSet="true">
+      <xsd:complexType>
+        <xsd:choice maxOccurs="unbounded">
+          <xsd:element name="metadata">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+              </xsd:sequence>
+              <xsd:attribute name="name" use="required" type="xsd:string" />
+              <xsd:attribute name="type" type="xsd:string" />
+              <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="assembly">
+            <xsd:complexType>
+              <xsd:attribute name="alias" type="xsd:string" />
+              <xsd:attribute name="name" type="xsd:string" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="data">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="resheader">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" />
+            </xsd:complexType>
+          </xsd:element>
+        </xsd:choice>
+      </xsd:complexType>
+    </xsd:element>
+  </xsd:schema>
+  <resheader name="resmimetype">
+    <value>text/microsoft-resx</value>
+  </resheader>
+  <resheader name="version">
+    <value>2.0</value>
+  </resheader>
+  <resheader name="reader">
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
+  <resheader name="writer">
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
+  <data name="Generic_Apply" xml:space="preserve">
+    <value>Apply</value>
+  </data>
+  <data name="Generic_Cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="FormHandshakeResult_Title" xml:space="preserve">
+    <value>Connection test</value>
+  </data>
+  <data name="FormHandshakeResult_Failure_Title" xml:space="preserve">
+    <value>Connection test failure</value>
+  </data>
+  <data name="FormHandshakeResult_Failure_Message" xml:space="preserve">
+    <value>An error occurred during the connection test.</value>
+  </data>
+  <data name="FormIconPicker_Title" xml:space="preserve">
+    <value>Icons</value>
+  </data>
+  <data name="FormConfiguration_Title" xml:space="preserve">
+    <value>Camera configuration</value>
+  </data>
+  <data name="FormConfiguration_Properties_StreamFormat" xml:space="preserve">
+    <value>Stream format:</value>
+  </data>
+  <data name="FormConfiguration_Properties_ImageSize" xml:space="preserve">
+    <value>Image size:</value>
+  </data>
+  <data name="FormConfiguration_Properties_ImageWidth" xml:space="preserve">
+    <value>Width:</value>
+  </data>
+  <data name="FormConfiguration_Properties_ImageHeight" xml:space="preserve">
+    <value>Height:</value>
+  </data>
+  <data name="FormConfiguration_Properties_Framerate" xml:space="preserve">
+    <value>Framerate:</value>
+  </data>
+  <data name="FormConfiguration_Properties_Exposure" xml:space="preserve">
+    <value>Exposure:</value>
+  </data>
+  <data name="FormConfiguration_Properties_ExposureMicro" xml:space="preserve">
+    <value>Exposure (µs):</value>
+  </data>
+  <data name="FormConfiguration_Properties_Gain" xml:space="preserve">
+    <value>Gain:</value>
+  </data>
+  <data name="FormConfiguration_Properties_Focus" xml:space="preserve">
+    <value>Focus:</value>
+  </data>
+  <data name="FormConfiguration_Properties_BayerFormatConversion" xml:space="preserve">
+    <value>Bayer format conversion:</value>
+  </data>
+  <data name="FormConfiguration_Auto" xml:space="preserve">
+    <value>Auto</value>
+  </data>
+  <data name="FormConfiguration_DevicePropertyPages" xml:space="preserve">
+    <value>Device property pages</value>
+  </data>
+  <data name="FormConfiguration_DevicePropertyPages_Error" xml:space="preserve">
+    <value>An error happened while trying to display the device property page for {0}.</value>
+  </data>
+  <data name="FormConfiguration_Reconnect" xml:space="preserve">
+    <value>Reconnect</value>
+  </data>
+  <data name="FormConfiguration_ImportParameters" xml:space="preserve">
+    <value>Import parameters</value>
+  </data>
+  <data name="FormConfiguration_Test" xml:space="preserve">
+    <value>Test</value>
+  </data>
+  <data name="FormConnectionWizard_Network" xml:space="preserve">
+    <value>Network</value>
+  </data>
+  <data name="FormConnectionWizard_Host" xml:space="preserve">
+    <value>Host (IP address)</value>
+  </data>
+  <data name="FormConnectionWizard_Port" xml:space="preserve">
+    <value>Port</value>
+  </data>
+  <data name="FormConnectionWizard_Format" xml:space="preserve">
+    <value>Format</value>
+  </data>
+  <data name="FormConnectionWizard_Authentication" xml:space="preserve">
+    <value>Authentication</value>
+  </data>
+  <data name="FormConnectionWizard_User" xml:space="preserve">
+    <value>User</value>
+  </data>
+  <data name="FormConnectionWizard_Password" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="FormConnectionWizard_URL" xml:space="preserve">
+    <value>Final URL</value>
+  </data>
+  <data name="FormConfiguration_EnableHardwareCompression" xml:space="preserve">
+    <value>Enable hardware compression</value>
+  </data>
+  <data name="FormConfiguration_EnableSoftwareDemosaicing" xml:space="preserve">
+    <value>Enable software demosaicing</value>
+  </data>
+  <data name="FormConfiguration_ResultingFramerate" xml:space="preserve">
+    <value>Resulting framerate:</value>
+  </data>
+  <data name="FormConfiguration_ExportDeviceGenICamXMLFile" xml:space="preserve">
+    <value>Export device GenICam XML file</value>
+  </data>
 </root>
