--- a/Kinovea.ScreenManager/Properties/Resources.resx
+++ b/Kinovea.ScreenManager/Properties/Resources.resx
@@ -1878,4 +1878,7 @@
   <data name="keyframe_id" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\keyframe-id.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="quadrants" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\quadrants.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
