--- a/Kinovea.ScreenManager/Properties/Drawings.resx
+++ b/Kinovea.ScreenManager/Properties/Drawings.resx
@@ -1034,4 +1034,7 @@
   <data name="stop_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\stop-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="play_green2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\play-green2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
