--- a/Kinovea.ScreenManager/Properties/Resources.resx
+++ b/Kinovea.ScreenManager/Properties/Resources.resx
@@ -1944,4 +1944,10 @@
   <data name="ellipse_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ellipse-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="delete_notes" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\delete-notes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="notes2_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\notes2-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
