--- a/Kinovea.ScreenManager/Properties/Resources.resx
+++ b/Kinovea.ScreenManager/Properties/Resources.resx
@@ -1948,4 +1948,7 @@
   <data name="close2d_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\close2d-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="group_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\group-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
