--- a/Kinovea.ScreenManager/Properties/Capture.resx
+++ b/Kinovea.ScreenManager/Properties/Capture.resx
@@ -409,4 +409,10 @@
   <data name="speaker_mute" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\speakermute.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="live_photos_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\live-photos-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="live_orange" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\live_orange.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
